--- a/2DRythmGame/Assembly-CSharp.csproj
+++ b/2DRythmGame/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\NoteBehavior.cs" />
     <Compile Include="Assets\Scripts\NoteController.cs" />
+    <Compile Include="Assets\Scripts\ObjectPooler.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>D:/Unity_Rhythm_Game_Project/Project/Unity-2D-Rhythm-Game/2DRythmGame/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
